--- a/w5_React/src/01.React的使用.html
+++ b/w5_React/src/01.React的使用.html
@@ -7,6 +7,7 @@
     <title>01.React的使用</title>
     <script src="../node_modules/react/umd/react.development.js"></script>
     <script src="../node_modules/react-dom/umd/react-dom.development.js"></script>
+    <script></script>
     
 </head>
 <body>
@@ -23,6 +24,8 @@
                         <li>技术高</li>
                     </ul>
                 </div>
+            
+            * JSX
          */
         ReactDOM.render(
             // 渲染内容：通过React.createElement()
